# kma_parser

./: .gitignore  Cargo.toml  README.md  hell.json  result.json
anoromi/.vim/undodir/: %home%anoromi%mycode%rust%kma_parser%.gitignore  %home%anoromi%mycode%rust%kma_parser%README.md  %home%anoromi%mycode%rust%kma_parser%config.json  %home%anoromi%mycode%rust%kma_parser%configs%econ.json  %home%anoromi%mycode%rust%kma_parser%configs%softies.json  %home%anoromi%mycode%rust%kma_parser%src%cli.rs  %home%anoromi%mycode%rust%kma_parser%src%config.rs  %home%anoromi%mycode%rust%kma_parser%src%error.rs  %home%anoromi%mycode%rust%kma_parser%src%main.rs  %home%anoromi%mycode%rust%kma_parser%src%parser.rs  %home%anoromi%mycode%rust%kma_parser%src%schedule.rs  %home%anoromi%mycode%rust%kma_parser%src%utils.rs
configs/: econ.json  softies.json
spreadsheet/: 3.xlsx  Economists.xlsx  ~$3.xlsx
src/: cli.rs  config.rs  main.rs  parser.rs  schedule.rs  utils.rs
