[package]
name = "kma_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
calamine = { version = "0.22.0", features = ["dates"] }
clap = { version = "4.4.6", features = ["derive"] }
nom = "7.1.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
